# automation

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  template.html
